force-app/main/default/objects/WebshopStaticSliderItem__c/WebshopStaticSliderItem__c.object-meta.xml
<CustomObject>
    <label>Static Slider Item</label>
    <nameField>
        <label>Static Slider Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Static Slider Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>