force-app/main/default/objects/WebshopStaticSliderItem__c/fields/ParentStaticSlider__c.field-meta.xml
<CustomField>
    <fullName>ParentStaticSlider__c</fullName>
    <label>Parent Static Slider</label>
    <referenceTo>WebshopStaticSlider__c</referenceTo>
    <relationshipLabel>Static Slider Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>