force-app/main/default/objects/WebshopStaticSliderItem__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>Text on the slider.</description>
    <label>Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>